--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.3.0
+  firebase_core: ^2.6.1
 
 dev_dependencies:
   flutter_test:
